update https blog

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                 data-filter-item
                 data-category="end-to-end web development"
               >
-                <a target="_blank" href="http://blog.nhatnguyen.click">
+                <a target="_blank" href="https://blog.nhatnguyen.click">
                   <figure class="project-img">
                     <div class="project-item-icon-box">
                       <ion-icon name="eye-outline"></ion-icon>
