update css timeline-text-link

--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
 
                 <div class="timeline-text">
                   <a
+                    class="timeline-text-link"
                     target="_blank"
                     href="https://drive.google.com/file/d/1Zyzc3fExyelPGpLh_Tx1BB8jSK5thDPj/view?usp=sharing"
                   >
@@ -444,6 +445,7 @@
                   </a>
 
                   <a
+                    class="timeline-text-link"
                     target="_blank"
                     href="https://drive.google.com/file/d/1rDpZm2uuF5t4SCVTOn0G0mdDUBYvHpq6/view?usp=sharing"
                     >Professional Node JS Developer (9.1 - Excellent)</a
@@ -458,6 +460,7 @@
 
                 <div class="timeline-text">
                   <a
+                    class="timeline-text-link"
                     target="_blank"
                     href="https://drive.google.com/file/d/1AWlB4OanR0bzdz0SPgdAXLJxQs89UBcP/view?usp=sharing"
                   >
