--- a/index.html
+++ b/index.html
@@ -295,14 +295,14 @@
               <div class="modal-img-wrapper">
                 <figure class="modal-avatar-box">
                   <img
-                    src="./assets/images/avatar-1.png"
+                    src="./assets/images/avatar.png"
                     alt="Daniel lewis"
                     width="80"
                     data-modal-img
                   />
                 </figure>
 
-                <img src="./assets/images/icon-quote.svg" alt="quote icon" />
+                <img src="./assets/images/icons8-mysql.svg" alt="quote icon" />
               </div>
 
               <div class="modal-content">
@@ -338,7 +338,7 @@
             <h3 class="h3 skills-title">Skills</h3>
 
             <div class="skills-list content-card">
-              <h4 class="h4">Frontend</h4>
+              <h4 class="h4 mb-12">Frontend</h4>
 
               <div class="skills-item">
                 <ion-icon class="mr-4" name="logo-html5"></ion-icon>
@@ -368,7 +368,7 @@
                 <h5 class="h5">TypeScript</h5>
               </div>
 
-              <h4 class="h4">Backend</h4>
+              <h4 class="h4 mt-20 mb-12">Backend</h4>
 
               <div class="skills-item">
                 <ion-icon class="mr-4" name="logo-nodejs"></ion-icon>
@@ -396,7 +396,7 @@
                 <h5 class="h5">NestJS</h5>
               </li>
 
-              <h4 class="h4">Database</h4>
+              <h4 class="h4 mt-20 mb-12">Database</h4>
 
               <div class="skills-item">
                 <img
@@ -406,7 +406,7 @@
                 <h5 class="h5">MySQL</h5>
               </div>
 
-              <h4 class="h4">Deployment</h4>
+              <h4 class="h4 mt-20 mb-12">Deployment</h4>
 
               <li class="skills-item">
                 <ion-icon class="mr-4" name="git-branch-outline"></ion-icon>
@@ -437,19 +437,22 @@
 
                 <div class="timeline-text">
                   <a
-                    class="timeline-text-link"
                     target="_blank"
                     href="https://drive.google.com/file/d/1Zyzc3fExyelPGpLh_Tx1BB8jSK5thDPj/view?usp=sharing"
                   >
-                    Professional Front-end Developer (8.8 - Very Good)
+                    <p class="timeline-text-link">
+                      Professional Front-end Developer (8.8 - Very Good)
+                    </p>
                   </a>
 
                   <a
-                    class="timeline-text-link"
                     target="_blank"
                     href="https://drive.google.com/file/d/1rDpZm2uuF5t4SCVTOn0G0mdDUBYvHpq6/view?usp=sharing"
-                    >Professional Node JS Developer (9.1 - Excellent)</a
                   >
+                    <p class="timeline-text-link">
+                      Professional Node JS Developer (9.1 - Excellent)
+                    </p>
+                  </a>
                 </div>
               </li>
 
@@ -460,11 +463,12 @@
 
                 <div class="timeline-text">
                   <a
-                    class="timeline-text-link"
                     target="_blank"
                     href="https://drive.google.com/file/d/1AWlB4OanR0bzdz0SPgdAXLJxQs89UBcP/view?usp=sharing"
                   >
-                    Information Technology - IT (8.5 - Very Good)
+                    <p class="timeline-text-link">
+                      Information Technology - IT (8.5 - Very Good)
+                    </p>
                   </a>
                 </div>
               </li>
