update margin button down cv

--- a/index.html
+++ b/index.html
@@ -107,18 +107,18 @@
                 <address>Binh Chanh, Ho Chi Minh, Viet Nam</address>
               </div>
             </li>
-
-            <li class="contact-item">
-              <a
-                href="./assets/files/CV_nguyenMinhNhat_Fullstack_Fresher.pdf"
-                class="icon-box-cv"
-                download
-              >
-                <ion-icon name="document-outline"></ion-icon>
-                Dowload CV
-              </a>
-            </li>
           </ul>
+
+          <div class="contact-item-cv">
+            <a
+              href="./assets/files/CV_nguyenMinhNhat_Fullstack_Fresher.pdf"
+              class="icon-box-cv"
+              download
+            >
+              <ion-icon name="document-outline"></ion-icon>
+              Dowload CV
+            </a>
+          </div>
 
           <div class="separator"></div>
 
