update link portfolio

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               download
             >
               <ion-icon name="document-outline"></ion-icon>
-              Dowload CV
+              <span>Download CV</span>
             </a>
           </div>
 
@@ -488,41 +488,37 @@
                   </h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      URL:
+                    <div>
                       <form
                         action="https://blog.nhatnguyen.click"
                         target="_blank"
                       >
-                        <input type="submit" value="blog.nhatnguyen.click" />
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>URL</span>
+                        </button>
                       </form>
-                    </li>
 
-                    <li>
-                      Demo:
-                      <form
-                        action="https://youtu.be/Hg0DhgFDgFg"
-                        target="_blank"
-                      >
-                        <input
-                          type="submit"
-                          value="https://youtu.be/Hg0DhgFDgFg"
-                        />
-                      </form>
-                    </li>
-
-                    <li>
-                      Github:
                       <form
                         action="https://github.com/nhatnguyen7602/chanh-blog-fullstack.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/chanh-blog-fullstack.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+
+                      <form
+                        action="https://youtu.be/Hg0DhgFDgFg"
+                        target="_blank"
+                      >
+                        <button type="submit">
+                          <ion-icon name="videocam-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
@@ -568,31 +564,27 @@
                   <h3 class="project-title" data-projects-title>Meipaly</h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      URL:
+                    <div>
                       <form
                         action="https://meipaly-ui-three.vercel.app"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://meipaly-ui-three.vercel.app"
-                        />
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>URL</span>
+                        </button>
                       </form>
-                    </li>
 
-                    <li>
-                      Github:
                       <form
                         action="https://github.com/nhatnguyen7602/Meipaly_UI.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/Meipaly_UI.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
@@ -631,31 +623,27 @@
                   <h3 class="project-title" data-projects-title>Samar</h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      URL:
+                    <div>
                       <form
                         action="https://samar-ui.vercel.app"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://samar-ui.vercel.app"
-                        />
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>URL</span>
+                        </button>
                       </form>
-                    </li>
 
-                    <li>
-                      Github:
                       <form
                         action="https://github.com/nhatnguyen7602/Samar_UI.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/Samar_UI.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
@@ -696,31 +684,27 @@
                   </h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      Demo:
-                      <form
-                        action="https://youtu.be/-eUxDNTiOTM"
-                        target="_blank"
-                      >
-                        <input
-                          type="submit"
-                          value="https://youtu.be/-eUxDNTiOTM"
-                        />
-                      </form>
-                    </li>
-
-                    <li>
-                      Github:
+                    <div>
                       <form
                         action="https://github.com/nhatnguyen7602/Cyberflix_Movie.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/Cyberflix_Movie.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+
+                      <form
+                        action="https://youtu.be/-eUxDNTiOTM"
+                        target="_blank"
+                      >
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
@@ -763,31 +747,27 @@
                   </h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      Demo:
-                      <form
-                        action="https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing"
-                        target="_blank"
-                      >
-                        <input
-                          type="submit"
-                          value="https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing"
-                        />
-                      </form>
-                    </li>
-
-                    <li>
-                      Github:
+                    <div>
                       <form
                         action="https://github.com/nhatnguyen7602/Clone_Fiverr_UI.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/Clone_Fiverr_UI.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+
+                      <form
+                        action="https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing"
+                        target="_blank"
+                      >
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
@@ -830,31 +810,27 @@
                   </h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      Demo:
-                      <form
-                        action="https://youtu.be/0fXBU4r0cQw"
-                        target="_blank"
-                      >
-                        <input
-                          type="submit"
-                          value="https://youtu.be/0fXBU4r0cQw"
-                        />
-                      </form>
-                    </li>
-
-                    <li>
-                      Github:
+                    <div>
                       <form
                         action="https://github.com/nhatnguyen7602/Clone_Pinterest_API.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/Clone_Pinterest_API.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+
+                      <form
+                        action="https://youtu.be/0fXBU4r0cQw"
+                        target="_blank"
+                      >
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
@@ -893,31 +869,27 @@
                   </h3>
 
                   <ul hidden class="project-text" data-projects-text>
-                    <li>
-                      Demo:
-                      <form
-                        action="https://youtu.be/tWjvUdnMSzE"
-                        target="_blank"
-                      >
-                        <input
-                          type="submit"
-                          value="https://youtu.be/tWjvUdnMSzE"
-                        />
-                      </form>
-                    </li>
-
-                    <li>
-                      Github:
+                    <div>
                       <form
                         action="https://github.com/nhatnguyen7602/Clone_Fiverr_API.git"
                         target="_blank"
                       >
-                        <input
-                          type="submit"
-                          value="https://github.com/nhatnguyen7602/Clone_Fiverr_API.git"
-                        />
+                        <button type="submit">
+                          <ion-icon name="logo-github"></ion-icon>
+                          <span>Github</span>
+                        </button>
                       </form>
-                    </li>
+
+                      <form
+                        action="https://youtu.be/tWjvUdnMSzE"
+                        target="_blank"
+                      >
+                        <button type="submit">
+                          <ion-icon name="globe-outline"></ion-icon>
+                          <span>Demo</span>
+                        </button>
+                      </form>
+                    </div>
 
                     <li>Responsibilities: Developer</li>
 
