update icon demo portfolio

--- a/index.html
+++ b/index.html
@@ -489,35 +489,26 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://blog.nhatnguyen.click"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://blog.nhatnguyen.click")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>URL</span>
-                        </button>
-                      </form>
+                        <ion-icon name="globe-outline"></ion-icon>
+                        <span>URL</span>
+                      </button>
 
-                      <form
-                        action="https://github.com/nhatnguyen7602/chanh-blog-fullstack.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/chanh-blog-fullstack.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
 
-                      <form
-                        action="https://youtu.be/Hg0DhgFDgFg"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://youtu.be/Hg0DhgFDgFg")'
                       >
-                        <button type="submit">
-                          <ion-icon name="videocam-outline"></ion-icon>
-                          <span>Demo</span>
-                        </button>
-                      </form>
+                        <ion-icon name="videocam-outline"></ion-icon>
+                        <span>Demo</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -565,25 +556,19 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://meipaly-ui-three.vercel.app"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://meipaly-ui-three.vercel.app")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>URL</span>
-                        </button>
-                      </form>
+                        <ion-icon name="globe-outline"></ion-icon>
+                        <span>URL</span>
+                      </button>
 
-                      <form
-                        action="https://github.com/nhatnguyen7602/Meipaly_UI.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Meipaly_UI.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -624,25 +609,19 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://samar-ui.vercel.app"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://samar-ui.vercel.app")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>URL</span>
-                        </button>
-                      </form>
+                        <ion-icon name="globe-outline"></ion-icon>
+                        <span>URL</span>
+                      </button>
 
-                      <form
-                        action="https://github.com/nhatnguyen7602/Samar_UI.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Samar_UI.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -685,25 +664,19 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://github.com/nhatnguyen7602/Cyberflix_Movie.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Cyberflix_Movie.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
 
-                      <form
-                        action="https://youtu.be/-eUxDNTiOTM"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://youtu.be/-eUxDNTiOTM")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>Demo</span>
-                        </button>
-                      </form>
+                        <ion-icon name="videocam-outline"></ion-icon>
+                        <span>Demo</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -748,25 +721,19 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://github.com/nhatnguyen7602/Clone_Fiverr_UI.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Clone_Fiverr_UI.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
 
-                      <form
-                        action="https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://drive.google.com/file/d/1aLIVjLhH_RxAzLyrFCGy_S76019NaGim/view?usp=sharing")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>Demo</span>
-                        </button>
-                      </form>
+                        <ion-icon name="videocam-outline"></ion-icon>
+                        <span>Demo</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -811,25 +778,19 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://github.com/nhatnguyen7602/Clone_Pinterest_API.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Clone_Pinterest_API.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
 
-                      <form
-                        action="https://youtu.be/0fXBU4r0cQw"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://youtu.be/0fXBU4r0cQw")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>Demo</span>
-                        </button>
-                      </form>
+                        <ion-icon name="videocam-outline"></ion-icon>
+                        <span>Demo</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
@@ -870,25 +831,19 @@
 
                   <ul hidden class="project-text" data-projects-text>
                     <div>
-                      <form
-                        action="https://github.com/nhatnguyen7602/Clone_Fiverr_API.git"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://github.com/nhatnguyen7602/Clone_Fiverr_API.git")'
                       >
-                        <button type="submit">
-                          <ion-icon name="logo-github"></ion-icon>
-                          <span>Github</span>
-                        </button>
-                      </form>
+                        <ion-icon name="logo-github"></ion-icon>
+                        <span>Github</span>
+                      </button>
 
-                      <form
-                        action="https://youtu.be/tWjvUdnMSzE"
-                        target="_blank"
+                      <button
+                        onclick='redirectToTarget("https://youtu.be/tWjvUdnMSzE")'
                       >
-                        <button type="submit">
-                          <ion-icon name="globe-outline"></ion-icon>
-                          <span>Demo</span>
-                        </button>
-                      </form>
+                        <ion-icon name="videocam-outline"></ion-icon>
+                        <span>Demo</span>
+                      </button>
                     </div>
 
                     <li>Responsibilities: Developer</li>
